crates/naos-core/tests/fixtures/conformance/rejected/rest-props.wc.tsx
export function RestProps({ label = "Send", ...rest }) {
  return <button>{label}</button>
}
